// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Aspect Ratio > Snapshots > should render additional classes 1`] = `
<div>
  <div
    class="_aspect-ratio_2f314e _aspect-ratio--1-1_2f314e other-class"
  >
    <div />
  </div>
</div>
`;

exports[`Aspect Ratio > Snapshots > should render radius classes 1`] = `
<div>
  <div
    class="_aspect-ratio_2f314e _aspect-ratio--1-1_2f314e _aspect-ratio--radius-2xl_2f314e"
  >
    <div />
  </div>
</div>
`;

exports[`Aspect Ratio > Snapshots > should render ratio classes 1`] = `
<div>
  <div
    class="_aspect-ratio_2f314e _aspect-ratio--16-9_2f314e"
  >
    <div />
  </div>
</div>
`;

exports[`Aspect Ratio > Snapshots > should renders default component 1`] = `
<div>
  <div
    class="_aspect-ratio_2f314e _aspect-ratio--1-1_2f314e"
  >
    <div />
  </div>
</div>
`;
